# FinalProject_StudentsDropout_AcademicSuccess

./: README.md  main.py  pyproject.toml
.virtual_documents/notebooks/: StudentDropout_AcademicSuccess.ipynb
data/cleaned/: admission.csv  courses.csv  curricular_units.csv  economic_indicators.csv  education_special_needs.csv  financial_status.csv  genders.csv  marital_status.csv  nationality.csv  parents.csv  students.csv  students_cleaned.csv  students_outcomes.csv
notebooks/: StudentDropout_AcademicSuccess.ipynb  Untitled.ipynb  app.py  cleaning_data.ipynb  machine_learning_models.ipynb
